--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/knex": "^0.16.1",
     "@types/node": "^18.13.0",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
@@ -18,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "knex": "^2.4.2",
     "pg": "^8.9.0"
   }
 }
