--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
-    "pg": "^8.9.0"
+    "pg": "^8.9.0",
+    "zod": "^3.20.6"
   }
 }
