--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "test": "npx jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.13.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
