--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "test": "npx jest"
+    "test": "npx jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.4.1",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/knex": "^0.16.1",
+    "@types/mock-knex": "^0.4.5",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
+    "mock-knex": "^0.4.12",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
@@ -25,6 +30,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
