--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "test": "npx jest --detectOpenHandles"
+    "build": "tsc",
+    "start": "node ./dist/src/index.js"
   },
   "keywords": [],
   "author": "",
